# fulltextsearch

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  makefile
cmake/: CompileOptions.cmake
include/libaccessor/: accessor.hpp  binary_accessor.hpp  text_accessor.hpp
include/libaccessor-c/: accessor.h
include/libbinary/: binbuffer.hpp  binreader.hpp
include/libindexer/: indexer.hpp
include/libindexer-c/: indexer.h
include/libmath/: math.hpp
include/libparser/: parser.hpp
include/libparser-c/: parser.h
include/libsearcher/: searcher.hpp
include/libsearcher-c/: searcher.h
include/libtrie/: trie.hpp
src/: CMakeLists.txt
src/fti/: CMakeLists.txt  main.cpp
src/ftp/: CMakeLists.txt  main.cpp
src/fts/: CMakeLists.txt  main.cpp
src/libaccessor/: CMakeLists.txt  accessor.cpp  binary_accessor.cpp  text_accessor.cpp
src/libaccessor-c/: CMakeLists.txt  accessor_wrap.cpp
src/libindexer/: CMakeLists.txt  indexer.cpp
src/libindexer-c/: CMakeLists.txt  indexer_wrap.cpp
src/libmath/: CMakeLists.txt  math.cpp
src/libparser/: CMakeLists.txt  parser.cpp
src/libsearcher/: CMakeLists.txt  searcher.cpp
src/libsearcher-c/: CMakeLists.txt  searcher_wrap.cpp
src/lua/: fts.lua  main.lua
src/luafts/: CMakeLists.txt  libfts.c
src/sum-cli/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  accessor.test.cpp  indexer.test.cpp  math.test.cpp  parser.test.cpp  searcher.test.cpp
