add_subdirectory(libmath)
add_subdirectory(sum-cli)
add_subdirectory(ftp)
add_subdirectory(libparser)
add_subdirectory(libindexer)
add_subdirectory(fti)
add_subdirectory(libaccessor)
add_subdirectory(libsearcher)
add_subdirectory(fts)
add_subdirectory(luafts)
add_subdirectory(libindexer-c)
add_subdirectory(libsearcher-c)
add_subdirectory(libaccessor-c)
